--- a/back/back/config/config.json
+++ b/back/back/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "user_숫자",
-    "password": "codingon_숫자",
-    "database": "db_숫자",
+    "username": "user_18",
+    "password": "codingon_18",
+    "database": "db_18",
     "host": "sesac-evaluation.cn6ww0owo0vr.ap-northeast-2.rds.amazonaws.com",
     "dialect": "mysql"
   }
